[package]
name = "eng-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.38"
log = "0.4.22"
colored = "2.1.0"
anyhow = "1.0.86"
textwrap = "0.16.1"
async-recursion = "1.1.1"
console = "0.15"
diff = "0.1.13"
regex = "1.5"
similar = "2.5.0"
syntect = "5.0"
once_cell = "1.19.0"
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.10.1"
dotenv = "0.15.0"

mcp-client-rs = { git = "https://github.com/tim-schultz/mcp-client-rs.git" }
# anthropic-sdk = { git = "https://github.com/tim-schultz/anthropic-sdk.git" }
anthropic-sdk = { path = "../anthropic-sdk" }
mockall = "0.13.1"

